Project

General

Profile

Actions

Bug #51261

closed

notifications: metadata does not work for COPY events

Added by Yuval Lifshitz almost 3 years ago. Updated over 2 years ago.

Status:
Resolved
Priority:
Normal
Target version:
-
% Done:

0%

Source:
Q/A
Tags:
notifications
Backport:
pacific
Regression:
No
Severity:
3 - minor
Reviewed:
Affected Versions:
ceph-qa-suite:
Pull request ID:
Crash signature (v1):
Crash signature (v2):

Description

metadata filter on does not work for COPY events
and metadata does not show in COPY events


Related issues 1 (0 open1 closed)

Copied to rgw - Backport #51514: pacific: notifications: metadata does not work for COPY eventsResolvedCory SnyderActions
Actions #1

Updated by Yuval Lifshitz almost 3 years ago

metadata filtering also fails for CompleteMultipart

Actions #2

Updated by Yuval Lifshitz almost 3 years ago

  • Status changed from In Progress to Fix Under Review
  • Pull request ID set to 41945
Actions #3

Updated by Yuval Lifshitz almost 3 years ago

  • Status changed from Fix Under Review to Pending Backport
Actions #4

Updated by Backport Bot almost 3 years ago

  • Copied to Backport #51514: pacific: notifications: metadata does not work for COPY events added
Actions #5

Updated by Loïc Dachary over 2 years ago

  • Status changed from Pending Backport to Resolved

While running with --resolve-parent, the script "backport-create-issue" noticed that all backports of this issue are in status "Resolved" or "Rejected".

Actions

Also available in: Atom PDF