rgw/notifications: support metadata filter in COPY events

Fixes: https://tracker.ceph.com/issues/51261

Signed-off-by: Yuval Lifshitz <ylifshit@redhat.com>